<resources>
	<string name="app_name">Aqua Mail Updates</string>

	<string name="not_installed">Not installed?</string>
	<string name="no_available_version_info">No available version info</string>
	<string name="label_installed">Installed</string>
	<string name="label_web_site">Available</string>
	<string name="label_changelog">Changes</string>
	<string name="label_download">Download</string>

	<string name="version_up_to_date">Already updated!</string>

	<string name="menu_refresh">Refresh</string>
	<string name="menu_settings">Settings</string>

	<string name="notification_title">New version</string>

	<string name="download_title">Downloading…</string>

	<string name="prefs_title">Settings</string>
	<string name="prefs_update_channel_label">Update channel</string>
	<string name="prefs_update_channel_stable">Stable</string>
	<string name="prefs_update_channel_dev">Development</string>
	<string name="prefs_update_channel_both">Both</string>

	<string name="prefs_check_enabled">Check for updates</string>
	<string name="prefs_check_interval_label">Check interval</string>

	<string name="prefs_check_interval_label_1h">1 hour</string>
	<string name="prefs_check_interval_label_2h">2 hours</string>
	<string name="prefs_check_interval_label_4h">4 hours</string>
	<string name="prefs_check_interval_label_12h">12 hours</string>
	<string name="prefs_check_interval_label_1d">1 day</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<string name="footer">Version %1$s</string>
</resources>
