<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		style="@style/MaterialDialogPadding"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/prefs_update_channel_label"
			android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

		<RadioGroup
			android:id="@+id/prefs_update_channel_group"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/prefs_padding_large">

			<RadioButton
				android:id="@+id/prefs_update_channel_stable"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/prefs_update_channel_stable"/>

			<RadioButton
				android:id="@+id/prefs_update_channel_dev"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/prefs_update_channel_dev"/>

			<RadioButton
				android:id="@+id/prefs_update_channel_both"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/prefs_update_channel_both"/>
		</RadioGroup>

		<CheckBox
			android:id="@+id/prefs_check_enabled"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/prefs_padding_large"
			android:text="@string/prefs_check_enabled"/>

		<SeekBar
			android:id="@+id/prefs_check_interval_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/prefs_padding_large"/>

		<TextView
			android:id="@+id/prefs_check_interval_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/prefs_padding_small"
			android:textAppearance="@android:style/TextAppearance.Material"/>

	</LinearLayout>

</ScrollView>
