<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="org.kman.updatechecker.MainActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:id="@+id/version_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">

			<TextView
				android:id="@+id/version_installed_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/label_installed"
				android:textAppearance="@android:style/TextAppearance.Material.Title"/>

			<TextView
				android:id="@+id/version_installed"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

			<TextView
				android:id="@+id/version_web_site_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/label_web_site"
				android:textAppearance="@android:style/TextAppearance.Material.Title"/>

			<TextView
				android:id="@+id/version_available"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

			<TextView
				android:id="@+id/version_up_to_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/version_up_to_date"
				android:textAppearance="@android:style/TextAppearance.Material.Headline"
				android:visibility="gone"/>

			<Button
				android:id="@+id/button_download"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:backgroundTint="#9C27B0"
				android:minWidth="220dp"
				android:text="@string/label_download"
				android:textColor="#FFFFFF"
				android:visibility="invisible"/>

			<TextView
				android:id="@+id/changes_web_site"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:textAppearance="@android:style/TextAppearance.Material.Body1"/>

		</LinearLayout>
	</ScrollView>

	<ProgressBar
		android:id="@+id/progress"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="16dp"
		android:visibility="gone"/>

</FrameLayout>
